--- a/style.css
+++ b/style.css
@@ -4,28 +4,11 @@
     justify-content: center;
 }
 
-#title {
+#name {
     display: flex;
     justify-content: center;
     color: rgb(248, 244, 244);
     font-family: ui-rounded;
-}
-
-.maincontainer {
-    background-color: rgb(246, 241, 241);
-}
-
-#cityDate {
-background-color: #bde0eb;
-}
-
-#date {
-    margin-left: 15px;
-}
-
-#currentWeatherContainer {
-    background-color: #b2ece9;
-    margin-bottom: 20px;
 }
 
 .card-title {
@@ -33,6 +16,24 @@ background-color: #bde0eb;
     justify-content: center;
 }
 
+.container {
+    background-color: rgb(246, 241, 241);
+}
+
+#areaDate {
+background-color: #bde0eb;
+}
+
+#currentDate {
+    margin-left: 15px;
+}
+
 .btn {
     margin: .5rem;
 }
+
+#currentWeather {
+    background-color: #b2ece9;
+    margin-bottom: 20px;
+}
+
