--- a/style.css
+++ b/style.css
@@ -1,39 +1,41 @@
-
-#head {
-    background: blue;
-    justify-content: center;
-}
-
-#name {
-    display: flex;
-    justify-content: center;
-    color: rgb(248, 244, 244);
-    font-family: ui-rounded;
-}
-
-.card-title {
-    display: flex;
-    justify-content: center;
-}
-
-.container {
-    background-color: rgb(246, 241, 241);
-}
-
-#areaDate {
-background-color: #bde0eb;
-}
-
-#currentDate {
-    margin-left: 15px;
-}
-
-.btn {
-    margin: .5rem;
-}
-
-#currentWeather {
-    background-color: #b2ece9;
-    margin-bottom: 20px;
-}
-
+nav {
+    background-color: rgb(179, 184, 206);
+    
+  }
+  
+  nav a {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 13px 15px;
+    text-decoration: none;
+  }
+  
+  nav a:hover {
+    background-color: #ddd;
+    color: rgb(172, 142, 142);
+  }
+  header {
+    background-color: rgb(51, 51, 51);
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 20px;
+  }
+  
+  header h1 {
+    margin: 0;
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  table td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  table tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+      
